--- a/manifest.yml
+++ b/manifest.yml
@@ -1,11 +1,9 @@
 ---
 applications:
-- name: pcf-hugo-workshop
+- name: pcf-tivit-workshop
   memory: 64M
   instances: 1
-  host: pcf-hugo-workshop
+  host: pcf-tivit-workshop
   domain: cfapps.io
   path: public
   buildpack: staticfile_buildpack
-
-
